[gd_scene load_steps=2 format=3 uid="uid://bqxvhqxvhqxvh2"]

[ext_resource type="Script" path="res://systems/game_core/test_unified_game.gd" id="1"]

[node name="UnifiedGameTestScene" type="Node"]
script = ExtResource("1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Unified Game System Test"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="SinglePlayerButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Start Single Player Game"

[node name="LocalMultiplayerButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Start Local Multiplayer Game"

[node name="NetworkHostButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Start Network Host"

[node name="NetworkJoinButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Join Network Game (localhost)"

[node name="HSeparator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="TestActionButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Test Game Action"

[node name="EndGameButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "End Current Game"

[node name="HSeparator3" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HelpLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Press D for debug info, H for help"
horizontal_alignment = 1